added new activity main, register_activity has barebones UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Digicard</string>
+    <string name="firstName">First Name</string>
+    <string name = "lastName">Last Name</string>
+    <string name = "email">Email</string>
+    <string name = "LinkedIn">LinkedIn</string>
 </resources>
