--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="firstName">First Name</string>
     <string name="lastName">Last Name</string>
     <string name="email">Email</string>
+    <string name="phone_number">Phone number</string>
     <string name="LinkedIn">LinkedIn</string>
 
     <string name="beam">BEAM</string>
